prevent floating images from overlapping uploads

--- a/sites/all/themes/newhopeks/css/style.css
+++ b/sites/all/themes/newhopeks/css/style.css
@@ -6680,20 +6680,7 @@ div.contextual-links-wrapper ul.contextual-links li a:hover {
     max-width: 100%;
   }
 }
-.field-file-upload:before,
-.field-file-upload:after {
-  content: " ";
-  display: table;
-}
-.field-file-upload:after {
-  clear: both;
-}
-.field-file-upload:before,
-.field-file-upload:after {
-  content: " ";
-  display: table;
-}
-.field-file-upload:after {
+.field-file-upload {
   clear: both;
 }
 .field-file-upload .field-file-upload__title {
