--- a/sites/all/themes/newhopeks/less/template.less
+++ b/sites/all/themes/newhopeks/less/template.less
@@ -452,7 +452,7 @@
 // File Upload Field
 
 .field-file-upload {
-    .clearfix;
+	clear: both;
 
     .field-file-upload__title {
         margin-bottom: 0;
